--- a/FastKill-starter/src/main/resources/application.properties
+++ b/FastKill-starter/src/main/resources/application.properties
@@ -26,3 +26,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #RocketMQ
 rocketmq.nameserver.addr=127.0.0.1:9876
 rocketmq.topic.name=ztw-mq
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
