--- a/FastKill-starter/src/main/resources/application.properties
+++ b/FastKill-starter/src/main/resources/application.properties
@@ -6,13 +6,33 @@ server.tomcat.accept-count=1000
 server.tomcat.threads.max=800
 server.tomcat.threads.min-spare=100
 
-
 #Redis
+#Redis配置
 spring.redis.host=127.0.0.1
-spring.redis.port=16379
-spring.redis.database=0
-spring.redis.jedis.pool.max-active=50
-spring.redis.jedis.pool.min-idle=20
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis服务器连接密码（默认为空）
+spring.redis.password=
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+#连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+#连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+#连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+#连接超时时间（毫秒）
+spring.redis.timeout=30000
+spring.redis.address=redis://127.0.0.1:16379
+
+#single/cluster
+redis.arrange.type=single
+# redis
+distributed.cache.type=redis
+# redisson
+distributed.lock.type=redisson
+# Guava
+local.cache.type=guava
 
 #mvc
 spring.mvc.static-path-pattern=/images/**
